--- a/src/pages/chats-page/components/chat-preview/chat-preview.css
+++ b/src/pages/chats-page/components/chat-preview/chat-preview.css
@@ -1,63 +1,72 @@
 .chat {
-    position: relative;
-    display: grid;
-    grid-template-columns: 47px 1fr;
-    grid-column-gap: 10px;
-    align-items: center;
-    width: 100%;
-    max-width: 290px;
-    padding: 10px 0;
-    background: transparent;
+  position: relative;
+  display: grid;
+  grid-template-columns: 47px 1fr;
+  grid-column-gap: 10px;
+  align-items: center;
+  width: 100%;
+  max-width: 290px;
+  padding: 10px 0;
+  background: transparent;
 }
+
 .chat-content {
-    position: relative;
-    height: 47px;
+  position: relative;
+  height: 47px;
 }
+
 .chat-content-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6px;
 }
+
 .chat-content__author {
-    font-size: 13px;
-    font-weight: 600;
-    color: var(--text-primary-color);
+  font-size: 13px;
+  font-weight: 600;
+  color: var(--text-primary-color);
 }
+
 .chat-content__time {
-    font-size: 9px;
-    font-weight: 500;
-    color: var(--text-secondary-color);
+  font-size: 9px;
+  font-weight: 500;
+  color: var(--text-secondary-color);
 }
+
 .chat-content-bottom {
-    display: flex;
-    column-gap: 3px;
+  display: flex;
+  column-gap: 3px;
 }
-.chat-content__sender, .chat-content__message {
-    margin: 0;
-    font-size: 12px;
-    font-weight: 500;
+
+.chat-content__sender,
+.chat-content__message {
+  margin: 0;
+  font-size: 12px;
+  font-weight: 500;
 }
+
 .chat-content__sender {
-    color: var(--text-primary-color);
+  color: var(--text-primary-color);
 }
 
 .chat-content__message {
-    color: var(--text-secondary-color);
+  color: var(--text-secondary-color);
 }
+
 .chat-content__amount {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 11px;
-    font-weight: 500;
-    line-height: 12px;
-    color: white;
-    background: var(--primary-color);
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 12px;
+  color: white;
+  background: var(--primary-color);
 }
