--- a/src/pages/chats-page/components/sidebar/sidebar.css
+++ b/src/pages/chats-page/components/sidebar/sidebar.css
@@ -1,24 +1,25 @@
 .sidebar {
-    width: 100%;
-    height: 100%;
-    padding: 21px 10px 0;
+  width: 100%;
+  height: 100%;
+  padding: 21px 10px 0;
 }
-.sidebar__link {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 12px;
-    font-size: 12px;
-    color: var(--text-secondary-color);
 
-    &::after {
-        content: url("/assets/arrow-right-short.svg");
-        width: 8px;
-        height: 12px;
-        margin-left: 8px;
-    }
+.sidebar__link {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 12px;
+  font-size: 12px;
+  color: var(--text-secondary-color);
+
+  &::after {
+    content: url('/assets/arrow-right-short.svg');
+    width: 8px;
+    height: 12px;
+    margin-left: 8px;
+  }
 }
 
 .sidebar__search-field {
-    margin: 23px 0 14px;
+  margin: 23px 0 14px;
 }
