--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,17 @@
-@import 'normalize.css';
+@import url('normalize.css');
 
 :root {
-  --primary-color: rgba(51, 105, 243, 1);
-  --text-primary-color: rgba(30, 30, 30, 1);
-  --text-secondary-color: rgba(153, 153, 153, 1);
-  --error-color: rgba(255, 47, 47, 1);
-  --light-grey: rgba(239, 239, 239, 1);
-  --light-blue: rgba(228, 237, 253, 1);
-  --bg-seconddary-color: rgba(251, 251, 251, 1);
-  --form-shadow: drop-shadow(0 0 6mm rgba(0, 0, 0, 0.14));
+  --primary-color: rgb(51 105 243 / 100%);
+  --text-primary-color: rgb(30 30 30 / 100%);
+  --text-secondary-color: rgb(153 153 153 / 100%);
+  --error-color: rgb(255 47 47 / 100%);
+  --light-grey: rgb(239 239 239 / 100%);
+  --light-blue: rgb(228 237 253 / 100%);
+  --bg-seconddary-color: rgb(251 251 251 / 100%);
+  --form-shadow: drop-shadow(0 0 6mm rgb(0 0 0 / 14%));
   --form-border-radius: 12px;
-  --svg-filter-primary-color: invert(42%) sepia(93%) saturate(4401%) hue-rotate(215deg) brightness(97%) contrast(96%);
+  --svg-filter-primary-color: invert(42%) sepia(93%) saturate(4401%)
+    hue-rotate(215deg) brightness(97%) contrast(96%);
 }
 
 body {
@@ -23,7 +24,8 @@ body {
   box-sizing: border-box;
 }
 
-h2, h3 {
+h2,
+h3 {
   margin: 0;
 }
 
