components as Block instances were refactored

--- a/src/components/button-icon/button-icon.hbs
+++ b/src/components/button-icon/button-icon.hbs
@@ -1,3 +1,2 @@
-<button  id="demo" class="button-icon" type="button" onclick={{onClick}}>
-  <img src={{url}} alt="menu icon">
-</button>
+<img src={{url}} alt="menu-icon">
+
