--- a/src/components/dropdown-menu/dropdown-menu.hbs
+++ b/src/components/dropdown-menu/dropdown-menu.hbs
@@ -1,10 +1,9 @@
-<div class="dropdown-menu">
-  <button class="dropdown-menu-item">
+<button class="dropdown-menu-item" onclick={{addUser}}>
     <img class="dropdown-menu-item__icon" alt="icon" src="/assets/circle-plus-icon.svg"/>
     <h2 class="dropdown-menu-item__text">Добавить пользователя</h2>
-  </button>
-  <button class="dropdown-menu-item">
+</button>
+<button class="dropdown-menu-item" onclick={{removeUser}}>
     <img class="dropdown-menu-item__icon" alt="icon" src="/assets/circle-minus-icon.svg"/>
     <h2 class="dropdown-menu-item__text">Удалить пользователя</h2>
-  </button>
-</div>
+</button>
+
