--- a/src/components/button-arrow/button-arrow.hbs
+++ b/src/components/button-arrow/button-arrow.hbs
@@ -1,7 +1,6 @@
-<button class='button-arrow'>
-  {{#if left}}
+{{#isLeft left}}
     <img class='button-arrow__img' src='/assets/arrow-left.svg' />
   {{else}}
     <img class='button-arrow__img' src='/assets/arrow-right.svg' />
-  {{/if}}
-</button>
+{{/isLeft}}
+
