--- a/src/components/form-input/form-input.hbs
+++ b/src/components/form-input/form-input.hbs
@@ -1,7 +1,6 @@
-<div class='input'>
-  <input class='input__value' name={{name}} type={{type}} required />
+<input class='input__value' name={{name}} type='text' required />
   <label class='input__label'>{{title}}</label>
   {{#if error}}
-    <div class='input__message'>{{error.message}}</div>
+    <div class='input__message'>{{error}}</div>
   {{/if}}
-</div>
+
