inner children lists componnets done

--- a/src/components/button-arrow/button-arrow.hbs
+++ b/src/components/button-arrow/button-arrow.hbs
@@ -1,6 +1,6 @@
-{{#isLeft left}}
+{{#compare direction "===" "left"}}
     <img class='button-arrow__img' src='/assets/arrow-left.svg' />
   {{else}}
     <img class='button-arrow__img' src='/assets/arrow-right.svg' />
-{{/isLeft}}
+{{/compare}}
 
