--- a/src/pages/chats-page/chats-page.hbs
+++ b/src/pages/chats-page/chats-page.hbs
@@ -1,4 +1,3 @@
-<div class="chats-page">
-  <div class="chats-page-left">{{> Sidebar}}</div>
-  <div class="chats-page-right">{{> ChatWindow}}</div>
-</div>
+<div class="chats-page-left">{{sidebar}}</div>
+<div class="chats-page-right">{{chatWindow}}</div>
+
