--- a/src/pages/chats-page/components/chat-window/chat-window.hbs
+++ b/src/pages/chats-page/components/chat-window/chat-window.hbs
@@ -1,5 +1,4 @@
-<div class="chat-window">
-  <div class="chat-window__header">{{> ChatWindowHeader}}</div>
-  <div class="chat-window__content">{{> ChatWindowContent}}</div>
-  <div class="chat-window__footer">{{> ChatWindowFooter}}</div>
-</div>
+<div class="chat-window__header">{{header}}</div>
+<div class="chat-window__content">{{content}}</div>
+<div class="chat-window__footer">{{footer}}</div>
+
