--- a/src/pages/chats-page/components/chat-window/components/chat-window-footer/chat-window-footer.hbs
+++ b/src/pages/chats-page/components/chat-window/components/chat-window-footer/chat-window-footer.hbs
@@ -1,5 +1,4 @@
-<div class="chat-window-footer">
-  <img src="/assets/file-attach-icon.svg" alt="file attach icon"/>
-  {{> InputMessage name="message" placeholder="Сообщение"}}
-  {{> ButtonArrow right = true}}
-</div>
+<img src="/assets/file-attach-icon.svg" alt="file attach icon"/>
+{{inputMessage}}
+{{buttonArrow}}
+
