--- a/src/pages/chats-page/components/sidebar/sidebar.hbs
+++ b/src/pages/chats-page/components/sidebar/sidebar.hbs
@@ -1,5 +1,4 @@
-<div class="sidebar">
-  <a class="sidebar__link">Профиль</a>
-  <div class="sidebar__search-field">{{> SearchField}}</div>
-  {{> ChatsList}}
-</div>
+<a class="sidebar__link">Профиль</a>
+<div class="sidebar__search-field">{{searchField}}</div>
+{{chatsList}}
+
