--- a/src/pages/chats-page/components/chat-preview/chat-preview.hbs
+++ b/src/pages/chats-page/components/chat-preview/chat-preview.hbs
@@ -1,18 +1,16 @@
-<div class="chat">
-  {{> Avatar m=true}}
+{{> Avatar m=true}}
   <div class="chat-content">
     <div class="chat-content-top">
-      <h2 class="chat-content__author">Андрей</h2>
-      <h3 class="chat-content__time">21:30</h3>
+      <h2 class="chat-content__author">{{name}}</h2>
+      <h3 class="chat-content__time">{{time}}</h3>
     </div>
 
     <div class="chat-content-bottom">
-      <h3 class="chat-content__sender">You:</h3>
-      <h3 class="chat-content__message">message</h3>
+      <h3 class="chat-content__sender">{{#compare type "===" 'incoming'}}You:{{/compare}}</h3>
+      <h3 class="chat-content__message">{{text}}</h3>
     </div>
     {{#if amount}}
       <div class="chat-content__amount">{{amount}}</div>
     {{/if}}
-  </div>
-
 </div>
+
