--- a/src/pages/home-page/home-page.hbs
+++ b/src/pages/home-page/home-page.hbs
@@ -1,9 +1,2 @@
-<nav>
-  {{> NavLink path="/" text="Главная" }}
-  {{> NavLink path="/login" text="Авторизация" }}
-  {{> NavLink path="/sign-up" text="Регистрация" }}
-  {{> NavLink path="/chats" text="Чаты" }}
-  {{> NavLink path="/profile" text="Профиль" }}
-  {{> NavLink path="/profile/edit" text="Изменить профиль" }}
-  {{> NavLink path="/profile/change-password" text="Изменить пароль" }}
-</nav>
+{{navLinks}}
+
