--- a/src/pages/chats-page/components/chats-list/chats-list.css
+++ b/src/pages/chats-page/components/chats-list/chats-list.css
@@ -6,8 +6,23 @@
 
 .chats .chats__item {
   border-top: 1px solid var(--light-grey);
+  z-index: 1;
 }
 
 .chats__item:last-child {
   border-bottom: 1px solid var(--light-grey);
 }
+
+.chats__item:hover::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 107%;
+  height: 96%;
+  transform: translate(-50%, -50%);
+  background: var(--light-blue);
+  z-index: -1;
+}
+
+
