profile page done

--- a/src/pages/error-page/error-page.hbs
+++ b/src/pages/error-page/error-page.hbs
@@ -1,5 +1,4 @@
-<div class="error-page">
-  <h1 class="error-page__title">500</h1>
-  <h2 class="error-page__description">Мы уже фиксим</h2>
-  <a class="error-page__link" href="#">Назад к чатам</a>
-</div>
+<h1 class="error-page__title">{{status}}</h1>
+<h2 class="error-page__description">{{userMessage}}</h2>
+<a class="error-page__link" href="#">Назад к чатам</a>
+
