--- a/src/pages/login-page/login-page.hbs
+++ b/src/pages/login-page/login-page.hbs
@@ -1,11 +1,12 @@
-<div class="login-page">
-  {{#> Form name="loginForm" title="Вход" }}
-    {{#*inline "content"}}
-      {{> LoginPageContent }}
-    {{/inline}}
+{{#> Form name="loginForm" title="Вход" }}
+  {{#*inline "content"}}
+    {{> FormInput name="login" type="text" title="Логин"}}
+    {{> FormInput name="password" type="password" title="Пароль"}}
+  {{/inline}}
 
-    {{#*inline "actions"}}
-      {{> LoginPageActions }}
-    {{/inline}}
-  {{/Form}}
-</div>
+  {{#*inline "actions"}}
+    {{formButton}}
+    {{link}}
+  {{/inline}}
+{{/Form}}
+
