--- a/src/pages/profile-page/profile-page-edit/profile-page-edit.hbs
+++ b/src/pages/profile-page/profile-page-edit/profile-page-edit.hbs
@@ -1,10 +1,5 @@
 {{#> ProfilePageLayout}}
-    {{> ProfilePageAvatarUpload}}
-
-    {{#> ProfileFormEditLayout btnTitle="Сохранить"}}
-      {{#*inline "profilePageFormEdit"}}
-        {{> ProfileFormDetails}}
-      {{/inline}}
-    {{/ProfileFormEditLayout}}
-
+    {{profilePageAvatarUpload}}
+    {{profileFormDetails}}
+    {{buttonForm}}
 {{/ProfilePageLayout}}
