profile edit and pswd done

--- a/src/pages/profile-change-pswd-page/profile-change-pswd-page.hbs
+++ b/src/pages/profile-change-pswd-page/profile-change-pswd-page.hbs
@@ -1,5 +1,12 @@
-{{#> ProfilePageLayout}}
+<div class="profile-page-back-to">
+  {{buttonArrow}}
+</div>
+<div class="profile-page-content">
+  <div class="profile-page-content-header">
     {{avatar}}
-    {{editFieldsList}}
+  </div>
+  <div>{{editFieldsList}}</div>
+  <div class="profile-page-content-actions">
     {{buttonForm}}
-{{/ProfilePageLayout}}
+  </div>
+</div>
