login and sign up done

--- a/src/pages/login-page/login-page.hbs
+++ b/src/pages/login-page/login-page.hbs
@@ -1,12 +1,2 @@
-{{#> Form name="loginForm" title="Вход" }}
-  {{#*inline "content"}}
-    {{> FormInput name="login" type="text" title="Логин"}}
-    {{> FormInput name="password" type="password" title="Пароль"}}
-  {{/inline}}
-
-  {{#*inline "actions"}}
-    {{formButton}}
-    {{link}}
-  {{/inline}}
-{{/Form}}
+{{form}}
 
