--- a/src/pages/sign-up-page/sign-up-page.hbs
+++ b/src/pages/sign-up-page/sign-up-page.hbs
@@ -1,11 +1,3 @@
 <div class="sign-up-page">
-  {{#> Form name="signUpForm" title="Регистрация" }}
-    {{#*inline "content"}}
-      {{> SignUpPageContent }}
-    {{/inline}}
-
-    {{#*inline "actions"}}
-      {{> SignUpPageActions }}
-    {{/inline}}
-  {{/Form}}
+{{form}}
 </div>
