--- a/src/components/form-input/form-input.hbs
+++ b/src/components/form-input/form-input.hbs
@@ -1,6 +1,6 @@
-<input class='input__value' name={{name}} type='text' required />
-  <label class='input__label'>{{title}}</label>
-  {{#if error}}
-    <div class='input__message'>{{error.message}}</div>
-  {{/if}}
+<input class='input__value' name="{{name}}" type="{{type}}" required />
+<label class='input__label'>{{label}}</label>
+{{#if error}}
+  <div class='input__message'>{{error.message}}</div>
+{{/if}}
 
