validates pswd edit form

--- a/src/pages/profile-change-pswd-page/profile-change-pswd-page.hbs
+++ b/src/pages/profile-change-pswd-page/profile-change-pswd-page.hbs
@@ -1,12 +1,2 @@
-<div class="profile-page-back-to">
-  {{buttonArrow}}
-</div>
-<div class="profile-page-content">
-  <div class="profile-page-content-header">
-    {{avatar}}
-  </div>
-  <div>{{editFieldsList}}</div>
-  <div class="profile-page-content-actions">
-    {{buttonForm}}
-  </div>
-</div>
+{{profileEditLayout}}
+
