--- a/src/components/profile/profile-form-field/profile-form-field.hbs
+++ b/src/components/profile/profile-form-field/profile-form-field.hbs
@@ -1,3 +1,3 @@
-<h3 class='profile-form-field__title'>{{label}}</h3>
+{{#if label}}<h3 class='profile-form-field__title'>{{label}}</h3>{{/if}}
 {{input}}
 
