validation on blur done

--- a/src/pages/profile-page-edit/profile-page-edit.hbs
+++ b/src/pages/profile-page-edit/profile-page-edit.hbs
@@ -1,13 +1,2 @@
-<div class="profile-page-back-to">
-  {{buttonArrow}}
-</div>
-<div class="profile-page-content">
-  <div class="profile-page-content-header">
-    {{profilePageAvatarUpload}}
-  </div>
-  {{profileFormDetails}}
-  <div class="profile-page-content-actions">
-      {{buttonForm}}
-  </div>
-</div>
+{{profileEditLayout}}
 
