--- a/src/components/profile/profile-form-edit/profile-form-edit.css
+++ b/src/components/profile/profile-form-edit/profile-form-edit.css
@@ -1,4 +1,3 @@
-.profile-page-content-actions {
-    display: flex;
-    flex-direction: column;
+.profile-page-content-form-action {
+    margin-top: 60px;
 }
