errors set in login page

--- a/src/components/form-input/form-input.hbs
+++ b/src/components/form-input/form-input.hbs
@@ -1,4 +1,4 @@
-<input class='input__value' name="{{name}}" type="{{type}}" required />
+<input class='input__value' name="{{name}}" type="{{type}}" value="{{value}}" required />
 <label class='input__label'>{{label}}</label>
 {{#if error}}
   <div class='input__message'>{{error.message}}</div>
