--- a/src/pages/chats-page/components/chat-window/components/chat-window-footer/chat-window-footer.hbs
+++ b/src/pages/chats-page/components/chat-window/components/chat-window-footer/chat-window-footer.hbs
@@ -1,4 +1,5 @@
 <img src="/assets/file-attach-icon.svg" alt="file attach icon"/>
 {{inputMessage}}
 {{buttonArrow}}
+{{#if error}}<div class="message_error">{{error.message}}</div>{{/if}}
 
