page edit error

--- a/src/components/profile/profile-edit-layout/profile-edit-layout.hbs
+++ b/src/components/profile/profile-edit-layout/profile-edit-layout.hbs
@@ -1,9 +1,12 @@
 <div class="profile-page-back-to">
   {{buttonArrow}}
 </div>
-<div class="profile-page-content">
+<form class="profile-page-content">
   <div class="profile-page-content-header">
     {{avatar}}
   </div>
-    {{content}}
-</div>
+  <div>{{content}}</div>
+  <div class="profile-page-content-form-action">
+    {{buttonForm}}
+  </div>
+</form>
