routing is working

--- a/src/pages/error-page/error-page.hbs
+++ b/src/pages/error-page/error-page.hbs
@@ -1,4 +1,4 @@
 <h1 class="error-page__title">{{status}}</h1>
 <h2 class="error-page__description">{{userMessage}}</h2>
-<a class="error-page__link" href="#">Назад к чатам</a>
+{{link}}
 
