--- a/src/pages/profile-page/profile-page.hbs
+++ b/src/pages/profile-page/profile-page.hbs
@@ -10,9 +10,9 @@
   {{profileFormDetails}}
 
   <div class="profile-page-content-actions">
-    <a href="#" class="profile-page-content-actions__item">Изменить данные</a>
-    <a href="#" class="profile-page-content-actions__item">Изменить пароль</a>
-    <a href="#" class="profile-page-content-actions__item profile-page-content-actions__item_red">Выйти</a>
+    {{editData}}
+    {{editPassword}}
+    {{exit}}
   </div>
 </div>
 
